Arrumando bug na paginacao de categoria